src/objects/Translation_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Communication__c</fullName>
        <label>@DEPR Cmmunication</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Experience__c</fullName>
        <label>@DEPR Customer Experience</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fluency_Level__c</fullName>
        <label>Stílus - Gördülékenység</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grammar__c</fullName>
        <label>Nyelvhelyesség</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>@DEPR Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>(Spelling__c + Grammar__c + Fluency_Level__c) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Értékelés</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reliability__c</fullName>
        <label>@DEPR Reliability</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spelling__c</fullName>
        <label>Helyesírás</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Feladat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Translating</fullName>
                </value>
                <value>
                    <fullName>Proofreading</fullName>
                </value>
                <value>
                    <fullName>Editing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Feedbaack__c</fullName>
        <label>Szöveges visszajelzés</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Megrendelés</label>
        <referenceTo>Translation__c</referenceTo>
        <relationshipName>Translation_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Translator__c</fullName>
        <label>Fordító</label>
        <referenceTo>Translator__c</referenceTo>
        <relationshipName>Translation_Feedbacks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Típus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lektor</fullName>
                </value>
                <value>
                    <fullName>Projektvezető</fullName>
                </value>
                <value>
                    <fullName>Megrendelő</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fordítói Minősítés</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Translation Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fordítói Minősítések</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>